--- a/ob-rest-datajpa/src/main/resources/application.properties
+++ b/ob-rest-datajpa/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port = 8081
 #server.error.include-message=never
 #server.error.include-stacktrace = never
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+springdoc.swagger-ui.path=/swagger-ui.html
+
+
